<resources>
    <string name="app_name">Expiry Alert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_new_product_fragment">add new product fragment</string>
    <string name="add_new_product_button">button for adding new product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="jamanakavor">Home page fragment</string>
    <string name="title_activity_navigation_bar">NavigationBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="my_account">My Account</string>
    <string name="no_results_found">No results found</string>
    <string name="select_image">Select Image</string>
    <string name="save">Save</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="add_reminder_here">Add product</string>
    <string name="change_language">change language</string>
    <string name="enter_product_s_name">Enter product\'s name</string>
    <string name="add_product_and_set_reminder">Add product and set reminder</string>
    <string name="change_image">Change Image</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="product_s_name">Product\'s name</string>
    <string name="time_to_notify">Time to notify</string>
</resources>